src/test/deca/context/valid/logic/op-cmp-cov-float.deca
// Programme testant int < float

{
    if (7 < 4.5) {}
}