src/test/deca/context/invalid/autre/while-int.deca
// Programme testant une condition qui n'est pas un booléen

{
    int i = 7;
    if (i) {}
}